spicedb-kind-setup/svc-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spicedb-https
  labels:
    app: spicedb-cr
spec:
  rules:
    - host: spicedb-http.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: spicedb-cr
                port:
                  number: 8443
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spicedb-prometheus
  labels:
    app: spicedb-cr
spec:
  rules:
    - host: spicedb-metric.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: spicedb-cr
                port:
                  number: 9090
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spicedb-grpc
  labels:
    app: spicedb-cr
spec:
  rules:
    - host: spicedb-grpc.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: spicedb-cr
                port:
                  number: 50051
            path: /
            pathType: Prefix
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: spicedb
spec:
  virtualhost:
    fqdn: spicedb-grpc.127.0.0.1.nip.io
  routes:
  - conditions:
    - prefix: /
    services:
    - name: spicedb-cr
      port: 50051
      protocol: h2c
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: relations-grpc
spec:
  virtualhost:
    fqdn: relationships-service-grpc.127.0.0.1.nip.io
  routes:
  - conditions:
    - prefix: /
    services:
    - name: relationships-service-grpc
      port: 9000
      protocol: h2c
